--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,9 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.spockframework:spock-core:2.0-groovy-3.0'
-    testImplementation 'org.codehaus.groovy:groovy-all:3.0.18'
+    implementation 'org.apache.groovy:groovy:4.0.10'
+    testImplementation 'org.spockframework:spock-core:2.4-M1-groovy-4.0'
+
 }
 
 test {
